# dollbody

./: .env.example  .gitignore  CMakeLists.txt  HARDWARE.md  Makefile  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
.github/workflows/: build.yml
main/: CMakeLists.txt  app_main.c  audio.c  audio.h  avatar_img.c  avatar_img.h  battery.c  battery.h  board.h  config.c  config.h  config_store.c  config_store.h  display.c  display.h  events.h  http.c  http.h  idf_component.yml  improv.c  improv.h  led.c  led.h  mqtt.c  mqtt.h  power.c  power.h  record.c  record.h  scenario_img.c  scenario_img.h  secret_config.h  touch.c  touch.h  wifi_mgr.c  wifi_mgr.h  wifi_prov.c  wifi_prov.h
tools/: provision_wifi.sh
